fix: proper edge detection for left / right alignment

--- a/src/Dropdown.scss
+++ b/src/Dropdown.scss
@@ -34,6 +34,7 @@ svg[id^='svg-id-'] {
 
 .dropdown-container {
   width: 220px;
+  position: relative;
 }
 
 .li-wrapper {
